--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="src/imgs/airplane-tilt.svg" type="image/svg+xml">
+    <link rel="icon" href="src/imgs/Vector.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto React</title>
   </head>
